Warnings tijdens testen opgelost